{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 160,
  "lineage": "b03b7bc4-72f1-805e-a5c5-1ea284f11ee8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NAT_EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06195c6cc523b4a98",
            "association_id": "eipassoc-0a9e95af3dc641d43",
            "domain": "vpc",
            "id": "eipalloc-06195c6cc523b4a98",
            "network_border_group": "us-east-1",
            "network_interface": "eni-093b242abd2768590",
            "private_dns": "ip-11-0-0-175.ec2.internal",
            "private_ip": "11.0.0.175",
            "public_dns": "ec2-52-86-35-234.compute-1.amazonaws.com",
            "public_ip": "52.86.35.234",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "env": "Team-Oak"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-igw-Team-Oak",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:176906365059:internet-gateway/igw-015d1c74ab87ddf98",
            "id": "igw-015d1c74ab87ddf98",
            "owner_id": "176906365059",
            "tags": {
              "Name": "Team-Oak-IGW"
            },
            "tags_all": {
              "Name": "Team-Oak-IGW",
              "env": "Team-Oak"
            },
            "vpc_id": "vpc-033bce6bfdb4bd53e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main_NAT_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06195c6cc523b4a98",
            "association_id": "eipassoc-0a9e95af3dc641d43",
            "connectivity_type": "public",
            "id": "nat-0d4c8205c1c95e330",
            "network_interface_id": "eni-093b242abd2768590",
            "private_ip": "11.0.0.175",
            "public_ip": "52.86.35.234",
            "subnet_id": "subnet-0dcfc4445015b76d7",
            "tags": {
              "Name": "Team-Oak-NAT"
            },
            "tags_all": {
              "Name": "Team-Oak-NAT",
              "env": "Team-Oak"
            }
          },
          "dependencies": [
            "aws_eip.NAT_EIP",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05069357c60b1803d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d4c8205c1c95e330",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05069357c60b1803d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.main_NAT_gw",
            "aws_route_table.private-rt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-015d1c74ab87ddf98",
            "id": "r-rtb-0c2a87ee91bed166f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c2a87ee91bed166f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main-igw-Team-Oak",
            "aws_route_table.public-rt",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:176906365059:route-table/rtb-05069357c60b1803d",
            "id": "rtb-05069357c60b1803d",
            "owner_id": "176906365059",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d4c8205c1c95e330",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Team-Oak-private-RT"
            },
            "tags_all": {
              "Name": "Team-Oak-private-RT",
              "env": "Team-Oak"
            },
            "timeouts": null,
            "vpc_id": "vpc-033bce6bfdb4bd53e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:176906365059:route-table/rtb-0c2a87ee91bed166f",
            "id": "rtb-0c2a87ee91bed166f",
            "owner_id": "176906365059",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-015d1c74ab87ddf98",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Team-Oak-public-RT"
            },
            "tags_all": {
              "Name": "Team-Oak-public-RT",
              "env": "Team-Oak"
            },
            "timeouts": null,
            "vpc_id": "vpc-033bce6bfdb4bd53e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d2e9a087159e6f8",
            "route_table_id": "rtb-05069357c60b1803d",
            "subnet_id": "subnet-0afb3787e8f8542e8"
          },
          "dependencies": [
            "aws_route_table.private-rt",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e64a582dd3297780",
            "route_table_id": "rtb-05069357c60b1803d",
            "subnet_id": "subnet-01ea819878eb2e59f"
          },
          "dependencies": [
            "aws_route_table.private-rt",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c4a56fdc6b09154",
            "route_table_id": "rtb-0c2a87ee91bed166f",
            "subnet_id": "subnet-0dcfc4445015b76d7"
          },
          "dependencies": [
            "aws_route_table.public-rt",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015ff344540d5adc4",
            "route_table_id": "rtb-0c2a87ee91bed166f",
            "subnet_id": "subnet-05533ddd6ab9d4dbb"
          },
          "dependencies": [
            "aws_route_table.public-rt",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:176906365059:subnet/subnet-0afb3787e8f8542e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "11.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0afb3787e8f8542e8",
            "ipv6_cidr_block": "2600:1f18:12d3:c802::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-002646d2b5facc3b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "176906365059",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Team-Oak-Private-Subnetus-east-1a"
            },
            "tags_all": {
              "Name": "Team-Oak-Private-Subnetus-east-1a",
              "env": "Team-Oak"
            },
            "vpc_id": "vpc-033bce6bfdb4bd53e"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:176906365059:subnet/subnet-01ea819878eb2e59f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "11.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ea819878eb2e59f",
            "ipv6_cidr_block": "2600:1f18:12d3:c803::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0d0662c6ca0bf126a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "176906365059",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Team-Oak-Private-Subnetus-east-1b"
            },
            "tags_all": {
              "Name": "Team-Oak-Private-Subnetus-east-1b",
              "env": "Team-Oak"
            },
            "vpc_id": "vpc-033bce6bfdb4bd53e"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:176906365059:subnet/subnet-0dcfc4445015b76d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "11.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dcfc4445015b76d7",
            "ipv6_cidr_block": "2600:1f18:12d3:c800::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0523407a7220e9838",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "176906365059",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Team-Oak-Public-Subnetus-east-1a"
            },
            "tags_all": {
              "Name": "Team-Oak-Public-Subnetus-east-1a",
              "env": "Team-Oak"
            },
            "vpc_id": "vpc-033bce6bfdb4bd53e"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:176906365059:subnet/subnet-05533ddd6ab9d4dbb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "11.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05533ddd6ab9d4dbb",
            "ipv6_cidr_block": "2600:1f18:12d3:c801::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0cc686e4062a248df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "176906365059",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Team-Oak-Public-Subnetus-east-1b"
            },
            "tags_all": {
              "Name": "Team-Oak-Public-Subnetus-east-1b",
              "env": "Team-Oak"
            },
            "vpc_id": "vpc-033bce6bfdb4bd53e"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:176906365059:vpc/vpc-033bce6bfdb4bd53e",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-007b6d11c362e5833",
            "default_route_table_id": "rtb-0a857350b562efcb7",
            "default_security_group_id": "sg-024825350e35c1c3d",
            "dhcp_options_id": "dopt-01662f52edb1b9c77",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-033bce6bfdb4bd53e",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-01ef644abb529efe2",
            "ipv6_cidr_block": "2600:1f18:12d3:c800::/56",
            "ipv6_cidr_block_network_border_group": "us-east-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a857350b562efcb7",
            "owner_id": "176906365059",
            "tags": {
              "Name": "Team-Oak"
            },
            "tags_all": {
              "Name": "Team-Oak",
              "env": "Team-Oak"
            }
          }
        }
      ]
    }
  ]
}